--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div><h2>Python é bom e lindo também</h2></div>
     </main>
     <footer>
-        <h3> by Andréia e Sofia Emily</h3>
+        <h3> by Sofia Emily</h3>
         <p>|</p>
         <h4> Obrigada pela visita no site!</h4>
     </footer>
