--- a/index.html
+++ b/index.html
@@ -7,17 +7,27 @@
 </head>
 <body>
     <header>
-        <h1 class="titulo"> The News globo </h1>
+        <h1 class="titulo"> The New Globo </h1>
+        <img  class="globo" src="Globe-logo-by-DEEMKA-STUDIO-580x406-removebg-preview.png" alt="globo">
     </header>
     <main>
-        <div> <h2>IFPI tem sabádo letivo e alunos não gostam</h2></div>
-        <div><h2> Aula de introdução a program web sobre design responsivo</h2></div>
-        <div><h2>Python é bom e lindo também</h2></div>
+        <div> 
+            <h2 class="manchete">IFPI TEM SÁBADOS LETIVOS E ALUNOS NÃO GOSTAM</h2>
+            <h2 class="textc">Nesta sexta-feira, dia 13 de março, recebemos a triste informação que teria aula no sábado.
+                "Eu só queria dormir", lamentam alunos da rede federal.
+            </h2>
+            <h2 class="textc2"> Assim, com aulas no sábado, todos ficamos tristes, afinal não é possivel que os professores gostem de ver nossa cara no fim de semana.
+            </h2>
+            <img class="imagens" src="baixados.jpg" alt="instuto infernal">
+            <h5 class="textc3">IFPI (Instituto Federal de Pressão Integral) </h5>
+        </div>
+        <div><h2 class="manchete"> Aula de introdução a programação web sobre design responsivo</h2></div>
+        <div><h2 class="manchete">Python é bom e lindo também</h2></div>
     </main>
     <footer>
-        <h3> by Sofia Emily</h3>
-        <p>|</p>
-        <h4> Obrigada pela visita no site!</h4>
+        <h3 class="cc"> by Sofia Emily</h3>
+        <p class="cc">|</p>
+        <h3 class="cc"> Obrigada pela visita no site!</h3>
     </footer>
 </body>
 </html>
